# DNS

derive_enum/: Cargo.toml
derive_enum/src/: lib.rs
derive_enum/tests/: integration_tests.rs
dnslib/: Cargo.toml
dnslib/src/: error.rs  lib.rs
dnslib/src/rfc1035/: domain.rs  mod.rs  qclass.rs
dnssrv/: Cargo.toml
dnssrv/src/: error.rs  lib.rs  srv.rs  win.rs
dnssrv/test/data/: resolv.bad  resolv.ok
type2network/: Cargo.toml
type2network/src/: generics.rs  lib.rs  primitive.rs
type2network/src/obsolete/: cell.rs  composed.rs  error.rs
type2network/tests/: integration_tests.rs
type2network/type2network_derive/: Cargo.toml
type2network/type2network_derive/src/: enum_builder.rs  lib.rs  struct_builder.rs
